--- a/reelreview/src/css/details/CommentDetail.module.css
+++ b/reelreview/src/css/details/CommentDetail.module.css
@@ -185,6 +185,7 @@
     width: 32px;
     height: 32px;
     border-radius: 32px;
+    object-fit: cover;
 }
 
 .ccDetail {
@@ -326,6 +327,7 @@
     width: 40px;
     height: 40px;
     border-radius: 32px;
+    object-fit: cover;
 }
 
 .cmName {
