--- a/reelreview/src/css/users/Alert.module.css
+++ b/reelreview/src/css/users/Alert.module.css
@@ -1,12 +1,12 @@
 /* 모달창 활성화 시 배경 - 비밀번호 */
 .modalBackground {
     border-radius: 8px;
-    width: 415px;
+    width: 415.5px;
     height: 380px;
     position: fixed;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-49.85%, -50%);
     opacity: 30%;
     box-shadow: 0 2px 10px 1px #707070;
     z-index: 1001;
@@ -15,12 +15,12 @@
 /* 모달창 활성화 시 배경 - 로그아웃 */
 .modalBackground2 {
     border-radius: 8px;
-    width: 100%;
+    width: 415.5px;
     height: 100%;
     position: fixed;
     top: 50%;
-    left: 50.3%;
-    transform: translate(-50.1%, -50%);
+    left: 50%;
+    transform: translate(-49.85%, -50%);
     opacity: 30%;
     box-shadow: 0 2px 10px 1px #707070;
     z-index: 1001;
@@ -41,8 +41,8 @@
 
 .modalBackground_4 {
     border-radius: 8px;
-    width: 47.5%;
-    height: 45.5%;
+    width: 415px;
+    height: 380px;
     position: fixed;
     top: 50%;
     left: 50%;
