--- a/reelreview/src/css/users/Alert.module.css
+++ b/reelreview/src/css/users/Alert.module.css
@@ -52,6 +52,19 @@
     z-index: 1001;
 }
 
+.modalBackground5 {
+    border-radius: 8px;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    opacity: 30%;
+    box-shadow: 0 2px 10px 1px #707070;
+    z-index: 1001;
+}
+
 /* 임시 비밀번호 발급 알림창 - 일반 */
 .forgotPw_alert {
     border-radius: 12px;
