--- a/reelreview/src/css/details/CommentDetail.module.css
+++ b/reelreview/src/css/details/CommentDetail.module.css
@@ -355,7 +355,9 @@
 }
 
 .modal {
-    background-color: #fff;
+    width: 450px;
+    height: 450px;
+    background-color: #ffffff;
     padding: 15px;
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
@@ -364,6 +366,7 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    font-family: 'Noto Sans KR', sans-serif;
 }
 
 .modalContent {
@@ -383,13 +386,16 @@
 }
 
 .modalContent textarea {
+    border: none;
+    outline: none;
     width: 100%;
-    height: 500px;
-    max-width: 400px;
+    height: 340px;
+    padding: 5px;
     margin-bottom: 40px;
     resize: vertical;
-    padding: 5px;
-    border: none;
+    resize: none;
+    font-family: 'Noto Sans KR', sans-serif;
+    font-size: 17px;
 }
 
 .submitButtonContainer {
@@ -417,10 +423,15 @@
 }
 
 .submitButton {
-    background-color: #007bff;
-    color: #fff;
     border: none;
-    padding: 8px 20px;
-    cursor: pointer;
     border-radius: 4px;
+    width: 100px;
+    position: relative;
+    bottom: 10px;
+    right: 10px;
+    padding: 8px 20px;
+    background-color: #ff2f6e;
+    color: #fff;
+    cursor: pointer;
+    font-family: 'Noto Sans KR', sans-serif;
 }
